--- a/slides/css/custom.css
+++ b/slides/css/custom.css
@@ -5,7 +5,7 @@
     font-family: "SourceCodePro";
     font-style: normal;
     font-weight: normal;
-    src: url("../lib/font/SourceCodePro/SourceCodePro-Regular.ttf") format("truetype"), 
+    src: url("../lib/font/SourceCodePro/SourceCodePro-Regular.ttf") format("truetype"),
         url("../lib/font/SourceCodePro/SourceCodePro-Bold.ttf") format("truetype")
     ;
 }
@@ -32,6 +32,10 @@
     ;
 }
 
+.reveal a:not(.image) {
+    color: white;
+}
+
 .reveal {
     font-family: "SourceSansPro", sans-serif;
     font-size: 4em;
@@ -47,6 +51,11 @@
 
 .reveal h1 {
     font-size: 3em;
+}
+
+#title h1 {
+    font-size: 2.5em;
+    color: white;
 }
 
 .reveal h2 {
@@ -80,6 +89,14 @@
 
 .reveal p>code, li>code {
     background-color: #F0F0F0;
+}
+
+.reveal section {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.reveal section.without-darkback {
+    background-color: white;
 }
 
 .reveal section>ul {
