--- a/slides/css/custom.css
+++ b/slides/css/custom.css
@@ -32,6 +32,10 @@
     ;
 }
 
+.reveal .slides>section, .reveal .slides>section>section {
+    border-radius: 50px;
+}
+
 .reveal a:not(.image) {
     color: white;
 }
